--- a/dbmq/appsettings.Development.json
+++ b/dbmq/appsettings.Development.json
@@ -1,4 +1,9 @@
 ﻿{
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;User Id=teste;Password=teste;Database=qadb"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
