--- a/dbmq/dbmq.csproj
+++ b/dbmq/dbmq.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Apache.NMS.ActiveMQ.NetCore" Version="1.7.2" />
     <PackageReference Include="Apache.NMS.NetCore" Version="1.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
