--- a/scripts/haproxy.cfg
+++ b/scripts/haproxy.cfg
@@ -21,14 +21,22 @@ resolvers dns
     nameserver public-0  127.0.0.11:53
     hold valid 1s
 
-listen sqlserver
-  bind :1433
+listen mariadb
+  bind :3306
   mode tcp
+  balance roundrobin
+  server mdb-1 dbmq1:3306 resolvers dns check inter 1000
+  server mdb-2 dbmq2:3306 resolvers dns check inter 1000
+  server mdb-3 dbmq3:3306 resolvers dns check inter 1000
+
+#listen sqlserver
+#  bind :1433
+#  mode tcp
 #    option sql-check user haproxy_check
 #    balance leastconn
-  balance roundrobin
-  server sql-1 sqlnode1:1433 resolvers dns check inter 1000
-  server sql-2 sqlnode2:1433 resolvers dns check inter 1000
+#  balance roundrobin
+#  server sql-1 sqlnode1:1433 resolvers dns check inter 1000
+#  server sql-2 sqlnode2:1433 resolvers dns check inter 1000
 
 listen stats # Define a listen section called "stats"
   bind :5000 # Listen on localhost:9000
